@@ -1,5 +1,5 @@
-Last generated 2011-08-31
-Coverage: 715/933 (76.63%), w. legacy tests: 838/933 (89.82%)
+Last generated 2011-09-01
+Coverage: 716/934 (76.66%), w. legacy tests: 839/934 (89.83%)
 
 The following tags are not tested by the test suite:
 
