@@ -1,0 +1,3 @@
+install:
+	install -d -m 0755 "$(DESTDIR)/usr/lib/package"
+	echo "Hallo World" > "$(DESTDIR)/usr/lib/package/some-file"
