@@ -1,1 +1,1 @@
-some-file usr/share/lintian
+some-file usr/lib/lintian
