@@ -1,0 +1,6 @@
+Testname: files-arch-indep-not-marked-all
+Sequence: 6000
+Version: 1.0
+Architecture: any
+Description: Test of arch indep package not marked arch:all
+Test-For: package-contains-no-arch-dependent-files
