@@ -1,0 +1,1 @@
+E: files-arch-indep-not-marked-all: package-contains-no-arch-dependent-files
