@@ -1,1 +1,1 @@
-dummy usr/share/package/
+dummy usr/lib/package/
