@@ -1,9 +1,11 @@
 E: debug source: build-depends-indep-without-arch-indep
 E: debug source: version-substvar-for-external-package libhello0-dbg -> libhello
 E: hello-dbg: changelog-file-missing-in-native-package
+E: hello-hello-dbg: package-contains-no-arch-dependent-files
 E: hello: pkg-has-symbols-control-file-but-no-shared-libs
 E: hello: statically-linked-binary usr/bin/hello.dbg
 E: hello: unstripped-binary-or-object usr/bin/hello.dbg
+E: hi-dbg: package-contains-no-arch-dependent-files
 E: libhello0-dbg: binary-with-bad-dynamic-table usr/lib/libhello.so.dbg
 E: libhello0-dbg: missing-dependency-on-libc needed by usr/lib/debug/lib/libhello.so.0.0 and 1 others
 E: libhello0-dbg: sharedobject-in-library-directory-missing-soname usr/lib/libhello.so.dbg
